<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passwordPageConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:clickable="true"
    tools:context="com.project.randomnumbergenerator.fragments.UserFriendlyPasswordFragment">


    <Button
        android:id="@+id/generateUserPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/round_regular"
        android:text="@string/generate"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/userWord3TextEdit"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/userWord3TextEdit"
        app:layout_constraintTop_toBottomOf="@+id/userWord3TextEdit" />

    <EditText
        android:id="@+id/userWord1TextEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="?colorPrimary"
        android:ems="10"
        android:fontFamily="@font/round_regular"
        android:hint="@string/word_1"
        android:inputType="textPersonName"
        android:textColor="?colorOnSecondary"
        android:textColorHint="?colorOnSecondary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/userPasswordDescriptionTextView"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="@+id/userPasswordDescriptionTextView"
        app:layout_constraintTop_toBottomOf="@+id/userPasswordDescriptionTextView" />

    <TextView
        android:id="@+id/userPasswordDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/round_regular"
        android:text="@string/enter_2_3_words_to_generate_nyour_password"
        android:textAlignment="center"
        android:textColor="?colorOnSecondary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/generatedUserPasswordTextView"
        android:layout_width="289dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_border_background"
        android:fontFamily="@font/round_regular"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="?colorOnPrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/generateUserPasswordButton"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/generateUserPasswordButton"
        app:layout_constraintTop_toBottomOf="@+id/generateUserPasswordButton" />

    <EditText
        android:id="@+id/userWord2TextEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="?colorPrimary"
        android:ems="10"
        android:fontFamily="@font/round_regular"
        android:hint="@string/word_2"
        android:inputType="textPersonName"
        android:textColor="?colorOnSecondary"
        android:textColorHint="?colorOnSecondary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/userWord1TextEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userWord1TextEdit"
        app:layout_constraintTop_toBottomOf="@+id/userWord1TextEdit" />

    <EditText
        android:id="@+id/userWord3TextEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="?colorPrimary"
        android:ems="10"
        android:fontFamily="@font/round_regular"
        android:hint="@string/word_3"
        android:inputType="textPersonName"
        android:textColor="?colorOnSecondary"
        android:textColorHint="?colorOnSecondary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/userWord2TextEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userWord2TextEdit"
        app:layout_constraintTop_toBottomOf="@+id/userWord2TextEdit" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/round_regular"
        android:text="@string/result"
        android:textColor="?colorOnSecondary"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/generatedUserPasswordTextView"
        app:layout_constraintStart_toStartOf="@+id/generatedUserPasswordTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>