<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:orientation="vertical"
    tools:context=".activities.CoinTossActivity">

    <ImageView
        android:id="@+id/coinImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="320dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/heads"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/round_regular"
        android:text="@string/heads"
        android:textColor="@color/text_white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/coinImage"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/round_regular"
        android:text="@string/tails"
        android:textColor="@color/text_white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/coinImage"
        app:layout_constraintTop_toBottomOf="@+id/coinImage" />

    <TextView
        android:id="@+id/headsCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/round_regular"
        android:text="@string/_0"
        android:textColor="@color/text_white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/tailsCountTextView"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/tailsCountTextView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tailsCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/round_regular"
        android:text="@string/_0"
        android:textColor="@color/text_white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/clearCoinTossCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/round_regular"
        android:text="@string/clear"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/coinImage"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/coinImage"
        app:layout_constraintTop_toBottomOf="@+id/tailsCountTextView" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/tap_the_coin_or_shake_your_phone"
        android:fontFamily="@font/round_regular"
        android:textColor="@color/text_white"
        android:textSize="22sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/coinImage"
        app:layout_constraintEnd_toEndOf="@+id/coinImage"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/coinImage" />

</androidx.constraintlayout.widget.ConstraintLayout>