<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".fragments.EuroJackpotFragment">


    <TextView
        android:id="@+id/jackpotMainNumbers"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:text=""
        android:fontFamily="@font/round_regular"
        android:textColor="@color/text_white"
        android:textSize="22sp"
        android:gravity="center"
        android:background="@drawable/rounded_border_background"
        app:layout_constraintBottom_toBottomOf="@+id/jackpotExtraNumbers"
        app:layout_constraintEnd_toStartOf="@+id/jackpotExtraNumbers"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/jackpotExtraNumbers"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/jackpotExtraNumbers"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:text=""
        android:fontFamily="@font/round_regular"
        android:textColor="@color/text_white"
        android:textSize="22sp"
        android:gravity="center"
        android:background="@drawable/rounded_border_background"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/round_regular"
        android:text="@string/_5_main_numbers"
        android:textColor="@color/text_white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/round_regular"
        android:text="@string/_2_extra_numbers"
        android:textColor="@color/text_white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drawJackpotButton" />

    <Button
        android:id="@+id/drawJackpotButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:fontFamily="@font/round_regular"
        android:text="@string/draw"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:fontFamily="@font/round_regular"
        android:text="@string/draw_jackpot_numbers"
        android:textColor="@color/text_white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/drawJackpotButton"
        app:layout_constraintEnd_toEndOf="@+id/drawJackpotButton"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/drawJackpotButton" />
</androidx.constraintlayout.widget.ConstraintLayout>