<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".fragments.FullyRandomPasswordFragment">


    <TextView
        android:id="@+id/fullyRandomPasswordTextView"
        android:layout_width="283dp"
        android:layout_height="46dp"
        android:layout_marginBottom="264dp"
        android:background="@drawable/rounded_border_background"
        android:fontFamily="@font/round_regular"
        android:gravity="center"
        android:textColor="?colorOnSecondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/generateFullyRandomPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/round_regular"
        android:text="@string/generate"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/fullyRandomPasswordTextView"
        app:layout_constraintEnd_toEndOf="@+id/fullyRandomPasswordTextView"
        app:layout_constraintStart_toStartOf="@+id/fullyRandomPasswordTextView" />

    <Spinner
        android:id="@+id/passwordCharactersCountSpinner"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="?colorPrimary"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/generateFullyRandomPasswordButton"
        app:layout_constraintEnd_toEndOf="@+id/fullyRandomPasswordTextView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/round_regular"
        android:text="@string/characters_count"
        android:textColor="?colorOnSecondary"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/passwordCharactersCountSpinner"
        app:layout_constraintEnd_toStartOf="@+id/passwordCharactersCountSpinner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/fullyRandomPasswordTextView"
        app:layout_constraintTop_toTopOf="@+id/passwordCharactersCountSpinner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/round_regular"
        android:text="@string/result"
        android:textColor="?colorOnSecondary"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/fullyRandomPasswordTextView"
        app:layout_constraintStart_toStartOf="@+id/fullyRandomPasswordTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>